<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.paulo.cadastro.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/nome"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/idade"
        android:id="@+id/textView2"
        android:textSize="20dp"
        android:layout_below="@+id/nome"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/telefone"
        android:id="@+id/textView3"
        android:textSize="20dp"
        android:layout_below="@+id/idade"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/cpf"
        android:id="@+id/textView4"
        android:textSize="20dp"
        android:layout_below="@+id/telefone"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/rg"
        android:id="@+id/textView5"
        android:textSize="20dp"
        android:layout_below="@+id/cpf"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/sexo"
        android:id="@+id/textView6"
        android:textSize="20dp"
        android:layout_below="@+id/rg"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/estciv"
        android:id="@+id/textView7"
        android:textSize="20dp"
        android:layout_below="@+id/radioGroup"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignStart="@+id/textView6" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cadastrar"
        android:id="@+id/button"
        android:onClick="sendMessage"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="36dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/nome"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="15dp"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ ãõíéóáôêÁÉÓÃÕÔÊ"
        />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="36dp"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/idade"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="15dp"
        android:digits="1234567890"
        />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="36dp"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/telefone"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="15dp"
        android:digits="1234567890"
        />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="36dp"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/cpf"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="15dp"
        android:digits="1234567890"
        />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="36dp"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/rg"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="15dp"
        android:digits="1234567890"
        />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_below="@+id/textView6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal"
        android:id="@+id/radioGroup">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/masc"
            android:id="@+id/Masc"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fem"
            android:id="@+id/Fem"
            android:checked="false" />

    </RadioGroup>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_below="@+id/textView7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sol"
            android:id="@+id/Sol"
            android:checked="false"
            android:textSize="10dp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cas"
            android:id="@+id/Cas"
            android:checked="false"
            android:textSize="10dp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/div"
            android:id="@+id/Div"
            android:checked="false"
            android:textSize="10dp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/viu"
            android:id="@+id/Viu"
            android:checked="false"
            android:textSize="10dp" />
    </RadioGroup>

</RelativeLayout>
